fixing modal z-index

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -2798,7 +2798,7 @@ nav.navbar.navbar-default ul.dropdown-menu.cycle
   right: 0px
   background-color: rgba(0, 0, 0, 0.5)
   display: none
-  z-index: 899
+  z-index: 1031
 
 .mu-modal
   font-family: "Merriweather Sans"
@@ -2810,7 +2810,7 @@ nav.navbar.navbar-default ul.dropdown-menu.cycle
   top: 50px
   bottom: 50px
   overflow: auto
-  z-index: 999
+  z-index: 1032
   padding: 40px
   color: rgba(43, 43, 43, 0.85)
   background-color: #FFFFFF
